force-app/main/default/objects/IA_Marks__c/IA_Marks__c.object-meta.xml
<CustomObject>
    <label>IA Marks</label>
    <nameField>
        <label>IA Marks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IA Marks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>