force-app/main/default/objects/IA_Marks__c/fields/Active_Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Active_Course_Connection__c</fullName>
    <formula>Course_Connection__r.Active_Connection__c</formula>
    <label>Active Course Connection</label>
    <type>Checkbox</type>
</CustomField>