force-app/main/default/objects/IA_Marks__c/fields/Active_Section__c.field-meta.xml
<CustomField>
    <fullName>Active_Section__c</fullName>
    <formula>CASESAFEID(Course_Connection__r.hed__Program_Enrollment__r.Section__c)</formula>
    <label>Active Section</label>
    <type>Text</type>
</CustomField>