force-app/main/default/objects/IA_Marks__c/fields/Active_Semester_Number__c.field-meta.xml
<CustomField>
    <fullName>Active_Semester_Number__c</fullName>
    <formula>Course_Connection__r.hed__Program_Enrollment__r.Semester__r.Term_Number__c</formula>
    <label>Active Semester Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>