force-app/main/default/objects/IA_Marks__c/fields/Active_Semester_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Active_Semester_Record_ID__c</fullName>
    <formula>Course_Connection__r.hed__Program_Enrollment__r.Semester__r.Id</formula>
    <label>Active Semester Record ID</label>
    <type>Text</type>
</CustomField>