force-app/main/default/objects/IA_Marks__c/fields/Analysis_and_Synthesis_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Analysis_and_Synthesis_Secured_Marks__c</fullName>
    <label>Analysis and Synthesis- Secured Marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>