force-app/main/default/objects/IA_Marks__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <formula>Course_Connection__r.hed__Contact__r.LastName</formula>
    <label>Contact</label>
    <type>Text</type>
</CustomField>