force-app/main/default/objects/IA_Marks__c/fields/Continuous_Learning_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Continuous_Learning_Secured_Marks__c</fullName>
    <label>Continuous Learning- Secured Marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>