force-app/main/default/objects/IA_Marks__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <formula>Course_Connection__r.Course_Code__c</formula>
    <label>Course Code</label>
    <type>Text</type>
</CustomField>