force-app/main/default/objects/IA_Marks__c/fields/Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Connection</label>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>IA Marks</relationshipLabel>
    <relationshipName>IA_Marks</relationshipName>
    <type>Lookup</type>
</CustomField>