force-app/main/default/objects/IA_Marks__c/fields/Course_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Sub_Type__c</fullName>
    <label>Course Sub Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>