force-app/main/default/objects/IA_Marks__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <formula>Course_Connection__r.hed__Course_Offering__r.hed__Course__r.Course_Type_Logisys__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Type</label>
    <type>Text</type>
</CustomField>