force-app/main/default/objects/IA_Marks__c/fields/Description_of_Experiment_Secured_Mark__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Experiment_Secured_Mark__c</fullName>
    <label>Description of Experiment-Secured Mark</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>