force-app/main/default/objects/IA_Marks__c/fields/Ethical_Attitude_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Ethical_Attitude_Secured_Marks__c</fullName>
    <label>Ethical Attitude- Secured Marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>