force-app/main/default/objects/IA_Marks__c/fields/Execution_of_Exercise_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Execution_of_Exercise_Secured_Marks__c</fullName>
    <label>Execution of Exercise - Secured Marks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>