force-app/main/default/objects/IA_Marks__c/fields/Faculty_Course_Connection__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Course_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Faculty Course Connection</label>
    <referenceTo>hed__Course_Enrollment__c</referenceTo>
    <relationshipLabel>IA Marks (Faculty Course Connection)</relationshipLabel>
    <relationshipName>IA_Marks1</relationshipName>
    <type>Lookup</type>
</CustomField>