force-app/main/default/objects/IA_Marks__c/fields/IA_Type__c.field-meta.xml
<CustomField>
    <fullName>IA_Type__c</fullName>
    <label>IA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IA1</fullName>
            </value>
            <value>
                <fullName>IA2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>