force-app/main/default/objects/IA_Marks__c/fields/Independent_Learning_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Independent_Learning_Secured_Marks__c</fullName>
    <label>Independent Learning- Secured Marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>