force-app/main/default/objects/IA_Marks__c/fields/Literature_Survey_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Literature_Survey_Secured_Marks__c</fullName>
    <label>Literature Survey- Secured Marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>