force-app/main/default/objects/IA_Marks__c/fields/Logisys_Integration__c.field-meta.xml
<CustomField>
    <fullName>Logisys_Integration__c</fullName>
    <label>Logisys Integration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>