force-app/main/default/objects/IA_Marks__c/fields/Maximum_Marks__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Marks__c</fullName>
    <label>Maximum Marks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>