force-app/main/default/objects/IA_Marks__c/fields/Oral_Presentation_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Oral_Presentation_Secured_Marks__c</fullName>
    <label>Oral Presentation- Secured Marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>