force-app/main/default/objects/IA_Marks__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <formula>Course_Connection__r.hed__Program_Enrollment__r.hed__Account__r.Name</formula>
    <label>Program</label>
    <type>Text</type>
</CustomField>