force-app/main/default/objects/IA_Marks__c/fields/Punctuality_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Punctuality_Secured_Marks__c</fullName>
    <label>Punctuality - Secured Marks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>