force-app/main/default/objects/IA_Marks__c/fields/Quiz_Secured_marks__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Secured_marks__c</fullName>
    <label>Quiz Secured marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>