force-app/main/default/objects/IA_Marks__c/fields/Report_Writing_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Report_Writing_Secured_Marks__c</fullName>
    <label>Report Writing- Secured Marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>