force-app/main/default/objects/IA_Marks__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <formula>Course_Connection__r.hed__Program_Enrollment__r.hed__Account__r.Parent.Name</formula>
    <label>School</label>
    <type>Text</type>
</CustomField>