force-app/main/default/objects/IA_Marks__c/fields/Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Secured_Marks__c</fullName>
    <label>Secured Marks</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>