force-app/main/default/objects/IA_Marks__c/fields/Selection_of_Topic_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Selection_of_Topic_Secured_Marks__c</fullName>
    <label>Selection of Topic- Secured Marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>