force-app/main/default/objects/IA_Marks__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semester</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>IA Marks</relationshipLabel>
    <relationshipName>IA_Marks</relationshipName>
    <type>Lookup</type>
</CustomField>