force-app/main/default/objects/IA_Marks__c/fields/Seminar_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Seminar_Secured_Marks__c</fullName>
    <label>Seminar Secured Marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>