force-app/main/default/objects/IA_Marks__c/fields/SRN__c.field-meta.xml
<CustomField>
    <fullName>SRN__c</fullName>
    <label>SRN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>