force-app/main/default/objects/IA_Marks__c/fields/SRN_Number__c.field-meta.xml
<CustomField>
    <fullName>SRN_Number__c</fullName>
    <formula>Course_Connection__r.hed__Program_Enrollment__r.SRN_Number__c</formula>
    <label>SRN Number</label>
    <type>Text</type>
</CustomField>