force-app/main/default/objects/IA_Marks__c/fields/Theory_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Theory_Secured_Marks__c</fullName>
    <label>Theory Secured Marks</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>