force-app/main/default/objects/IA_Marks__c/fields/Total_Secured_Marks_New__c.field-meta.xml
<CustomField>
    <fullName>Total_Secured_Marks_New__c</fullName>
    <label>Total Secured Marks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>