force-app/main/default/objects/IA_Marks__c/fields/Unique_Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Course_Code__c</fullName>
    <label>Course Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>