force-app/main/default/objects/IA_Marks__c/fields/Viva_Voce_Practical_Secured_Marks__c.field-meta.xml
<CustomField>
    <fullName>Viva_Voce_Practical_Secured_Marks__c</fullName>
    <label>Viva Voce Practical - Secured Marks</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>